<?xml version="1.0" encoding="utf-8"?><!--
  ~ This file is part of Cosmic IDE.
  ~ Cosmic IDE is a free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
  ~ Cosmic IDE is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
  ~ You should have received a copy of the GNU General Public License along with Cosmic IDE. If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSurfaceContainerLow"
    tools:context=".fragment.AboutFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorSurfaceContainerLow">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            style="?attr/collapsingToolbarLayoutMediumStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/collapsingToolbarLayoutMediumSize"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/baseline_arrow_back_24"
                app:title="@string/about" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/img_app"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:background="@drawable/bg_circle"
                android:contentDescription="Icon maintener"
                android:focusable="true"
                android:scaleType="centerInside"
                android:src="@drawable/ic_kartikaide"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/app_name"
                android:textColor="?attr/colorPrimary"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="@id/img_app"
                app:layout_constraintStart_toStartOf="@id/img_app"
                app:layout_constraintTop_toBottomOf="@id/img_app" />

            <TextView
                android:id="@+id/tv_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:gravity="center"
                android:justificationMode="inter_word"
                android:layout_marginTop="5dp"
                android:text="@string/sub_title"
                android:textColor="?attr/colorPrimary"
                app:layout_constraintEnd_toEndOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <include
                android:id="@+id/social_layout"
                layout="@layout/about_layout_social"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_subtitle" />

            <TextView
                android:id="@+id/tv_dev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="38dp"
                android:text="@string/dev"
                android:textColor="?attr/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/social_layout" />

            <ImageView
                android:id="@+id/img_author"
                android:layout_width="73dp"
                android:layout_height="73dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="23dp"
                android:contentDescription="@string/img_dev"
                android:focusable="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_dev" />

            <TextView
                android:id="@+id/tv_name_dev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="11dp"
                android:text="@string/dev_maintener"
                android:textSize="19sp"
                app:layout_constraintStart_toEndOf="@id/img_author"
                app:layout_constraintTop_toTopOf="@id/img_author" />

            <TextView
                android:id="@+id/tv_subname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/sub_author"
                android:textSize="13sp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="@id/tv_name_dev"
                app:layout_constraintTop_toBottomOf="@id/tv_name_dev" />

            <TextView
                android:id="@+id/catatantentang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="28dp"
                android:justificationMode="inter_word"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_author" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_share"
                style="@style/Widget.Material3.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:text="@string/share_app"
                app:icon="@drawable/baseline_share_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/catatantentang" />

            <TextView
                android:id="@+id/catatanshare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="28dp"
                android:justificationMode="inter_word"
                android:text="@string/share_note"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/btn_share"
                app:layout_constraintTop_toBottomOf="@id/btn_share" />

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/catatanshare" />

            <TextView
                android:id="@+id/tv_copyright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="32dp"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/version"
                app:layout_constraintStart_toStartOf="@id/version"
                app:layout_constraintTop_toBottomOf="@id/version" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
